compiler/cx-treesitter-grammar/grammar.js
        source_file: ($) => repeat($._top_level_item),

        _top_level_item: ($) =>
            choice(
                $.preprocessor_directive,
                $.import_declaration,
                $.access_section,
                $.comptime_function_definition,
                $.type_definition,
                $.function_definition,
                $.function_declaration,
                $.declaration,
                $._statement,
            ),

        keyword: (_) => choice(...KEYWORDS),

        builtin_type: (_) => choice(...BUILTIN_TYPES),

        builtin_type_sequence: ($) => repeat1($.builtin_type),

        operator: (_) => token(choice(...OPERATORS)),

        identifier: (_) => /[A-Za-z_][A-Za-z0-9_]*/,

        compiler_identifier: (_) => /@[A-Za-z_][A-Za-z0-9_]*/,

        qualified_name: ($) =>
            prec.right(
                seq(
                    $.identifier,
                    repeat(seq(op($, "::"), $.identifier)),
                ),
            ),

        templated_name: ($) => seq($.qualified_name, $.template_arguments),

        callable_name: ($) => choice($.templated_name, $.qualified_name),

        template_arguments: ($) =>
            seq("<", commaSep1($.template_argument), ">"),

        template_argument: ($) =>
            choice($.type, $.number_literal, $.qualified_name, $.expression),

        type: ($) =>
            seq(
                repeat($.type_qualifier),
                choice(
                    $.builtin_type_sequence,
                    $.templated_name,
                    $.qualified_name,
                    $.struct_type,
                    $.union_type,
                    $.enum_type,
                ),
                repeat(
                    choice(
                        $.pointer_modifier,
                        $.reference_modifier,
                        $.array_modifier,
                    ),
                ),
            ),

        type_qualifier: ($) =>
            choice(
                keyword($, "const"),
                keyword($, "restrict"),
                keyword($, "volatile"),
                keyword($, "register"),
            ),

        pointer_modifier: ($) =>
            seq(
                op($, "*"),
                optional($.type_qualifier),
            ),

        reference_modifier: ($) =>
            seq(optional($.lifetime_modifier), op($, "&")),

        lifetime_modifier: ($) =>
            seq("'", choice($.identifier, keyword($, "static"))),

        type_definition: ($) =>
            choice(
                $.struct_definition,
                $.union_definition,
                $.enum_definition,
                $.enum_union_definition,
                $.typedef_definition,
            ),

        struct_definition: ($) =>
            seq(
                keyword($, "struct"),
                optional(field("name", $.identifier)),
                optional($.template_parameters),
                optional($.type_attributes),
                choice(
                    seq(
                        "{",
                        repeat($.field_declaration),
                        "}",
                        ";",
                    ),
                    ";",
                ),
            ),

        enum_union_definition: ($) =>
            seq(
                keyword($, "enum"),
                keyword($, "union"),
                optional(field("name", $.identifier)),
                optional($.type_attributes),
                "{",
                optional(commaSep1($.union_variant)),
                "}",
                ";",
            ),

        typedef_definition: ($) =>
            seq(
                keyword($, "typedef"),
                optional($.template_parameters),
                $.type,
                commaSep1($.typedef_declarator_with_initializer),
                ";",
            ),

        typedef_declarator_with_initializer: ($) =>
            seq(
                $.typedef_declarator,
                optional(seq(op($, "="), $.expression)),
            ),

        typedef_declarator: ($) =>
            choice(
                $.function_pointer_declarator,
                seq(
                    optional($.compiler_attribute),
                    $.identifier,
                    optional($.parameter_list),
                    repeat($.array_modifier),
                ),
            ),

        field_declaration: ($) =>
            seq(
                $.type,
                commaSep1($.field_declarator),
                ";",
            ),

        field_declarator: ($) =>
            seq(
                $.declarator,
                optional(seq(":", $.expression)),
            ),

        union_variant: ($) => seq($.identifier, op($, "::"), $.type),

        declaration: ($) =>
            seq(
                repeat($.declaration_specifier),
                $.variable_declaration,
                ";",
            ),

        variable_declaration: ($) =>
            seq(
                $.type,
                commaSep1($.declarator_with_initializer),
            ),

        declarator_with_initializer: ($) =>
            seq(
                $.declarator,
                optional(seq(op($, "="), $.expression)),
            ),

        declarator: ($) =>
            choice(
                $.function_pointer_declarator,
                seq(
                    optional($.compiler_attribute),
                    $.identifier,
                    repeat($.array_modifier),
                ),
            ),

        function_pointer_declarator: ($) =>
            seq(
                "(",
                repeat($.pointer_modifier),
                $.identifier,
                ")",
                $.parameter_list,
                repeat($.array_modifier),
            ),

        function_declarator: ($) =>
            seq(
                $.callable_name,
                $.parameter_list,
            ),

        function_definition: ($) =>
            prec(
                2,
                seq(
                    repeat($.declaration_specifier),
                    field("return_type", $.type),
                    field("declarator", $.function_declarator),
                    optional($.function_contract),
                    $.compound_statement,
                ),
            ),

        comptime_function_definition: ($) =>
            prec(
                3,
                seq(
                    keyword($, "comptime"),
                    field("return_type", $.comptime_value_type),
                    field("name", $.callable_name),
                    field("parameters", $.comptime_parameter_list),
                    optional($.function_contract),
                    $.compound_statement,
                ),
            ),

        comptime_value_type: ($) =>
            seq(
                optional(
                    seq(
                        keyword($, "expr"),
                        optional(seq("(", commaSep1($.type), ")")),
                    ),
                ),
                $.type,
            ),

        parameter_list: ($) =>
            seq(
                "(",
                optional(
                    choice(
                        seq(commaSep1($.parameter), ",", op($, "...")),
                        commaSep1($.parameter),
                        op($, "..."),
                    ),
                ),
                ")",
            ),

        parameter: ($) =>
            seq(
                $.type,
                optional($.declarator),
            ),

        comptime_parameter_list: ($) =>
            seq(
                "(",
                optional(commaSep1($.comptime_parameter)),
                ")",
            ),

        comptime_parameter: ($) =>
            seq(
                $.comptime_value_type,
                optional($.identifier),
            ),

        function_contract: ($) =>
            choice(
                seq(
                    keyword($, "safe"),
                    optional(
                        seq(
                            keyword($, "where"),
                            commaSep1($.contract_clause),
                        ),
                    ),
                ),
                seq(
                    keyword($, "where"),
                    commaSep1($.contract_clause),
                ),
            ),

        contract_clause: ($) =>
            seq(
                choice(
                    keyword($, "pre"),
                    seq(
                        keyword($, "post"),
                        optional(seq("(", $.identifier, ")")),
                    ),
                ),
                ":",
                "(",
                $.expression,
                ")",
            ),

        import_declaration: ($) =>
            seq(
                keyword($, "import"),
                $.import_path,
                optional(seq(keyword($, "as"), $.qualified_name)),
                ";",
            ),

        import_path: ($) =>
            seq(
                repeat(seq($.identifier, op($, "::"))),
                choice($.identifier, $.import_group),
            ),

        import_group: ($) => seq("{", commaSep1($.import_path), "}"),

        _statement: ($) =>
            choice(
                $.compound_statement,
                $.if_statement,
                $.while_statement,
                $.do_statement,
                $.for_statement,
                $.switch_statement,
                $.match_statement,
                $.defer_statement,
                $.return_statement,
                $.yield_statement,
                $.break_statement,
                $.continue_statement,
                $.goto_statement,
                $.unpack_statement,
                $.compiler_statement,
                $.labeled_statement,
                $.declaration,
                $.staged_continuation_statement,
                $.expression_statement,
                $.preprocessor_directive,
            ),

        compound_statement: ($) => seq("{", repeat($._statement), "}"),

        while_statement: ($) =>
            seq(
                keyword($, "while"),
                "(",
                $.expression,
                ")",
                $._statement,
            ),

        for_statement: ($) =>
            seq(
                keyword($, "for"),
                "(",
                optional(choice($.variable_declaration, $.expression)),
                ";",
                optional($.expression),
                ";",
                optional($.expression),
                ")",
                $._statement,
            ),

        match_statement: ($) =>
            seq(
                keyword($, "match"),
                "(",
                $.expression,
                ")",
                "{",
                repeat($.match_arm),
                "}",
            ),

        match_arm: ($) =>
            prec.right(seq($.match_pattern, op($, "=>"), $._statement)),

        match_pattern: ($) =>
            choice(
                $.number_literal,
                reserved("match", $.identifier),
                $.variant_pattern,
            ),

        variant_pattern: ($) =>
            seq(
                alias(
                    seq(
                        reserved("match", $.identifier),
                        repeat1(seq(op($, "::"), $.identifier)),
                    ),
                    $.qualified_name,
                ),
                optional($.template_arguments),
                optional(seq("(", optional(reserved("match", $.identifier)), ")")),
            ),

        defer_statement: ($) =>
            seq(
                keyword($, "defer"),
                choice($.staged_block, $.expression),
                ";",
            ),

        return_statement: ($) =>
            seq(keyword($, "return"), optional($.expression), ";"),

        yield_statement: ($) =>
            seq(keyword($, "yield"), optional($.expression), ";"),

        unpack_statement: ($) =>
            seq(
                alias("@unpack", $.compiler_identifier),
                "(",
                $.expression,
                ")",
                "{",
                optional(commaSep1($.unpack_binding)),
                "}",
                ";",
            ),

        unpack_binding: ($) => seq($.identifier, ":", $.identifier),

        expression_statement: ($) => seq(optional($.expression), ";"),

        expression: ($) =>
            choice(
                $.assignment_expression,
                $.conditional_expression,
                $.binary_expression,
                $.unary_expression,
                $.postfix_expression,
                $.primary_expression,
            ),

        conditional_expression: ($) =>
            prec.right(
                PREC.conditional,
                seq(
                    $.conditional_condition,
                    "?",
                    $.expression,
                    ":",
                    $.expression,
                ),
            ),

        conditional_condition: ($) =>
            choice(
                $.binary_expression,
                $.unary_expression,
                $.postfix_expression,
                $.primary_expression,
            ),

        binary_expression: ($) =>
            choice(
                prec.left(PREC.pipe, seq($.expression, choice(op($, "<|"), op($, "|>")), $.expression)),
                prec.left(PREC.logical_or, seq($.expression, op($, "||"), $.expression)),
                prec.left(PREC.logical_and, seq($.expression, op($, "&&"), $.expression)),
                prec.left(PREC.bitwise_or, seq($.expression, op($, "|"), $.expression)),
                prec.left(PREC.bitwise_xor, seq($.expression, op($, "^"), $.expression)),
                prec.left(PREC.bitwise_and, seq($.expression, op($, "&"), $.expression)),
                prec.left(PREC.equality, seq($.expression, choice(op($, "=="), op($, "!="), op($, "is")), $.expression)),
                prec.left(PREC.comparison, seq($.expression, choice(op($, "<"), op($, ">"), op($, "<="), op($, ">=")), $.expression)),
                prec.left(PREC.shift, seq($.expression, choice(op($, "<<"), op($, ">>")), $.expression)),
                prec.left(PREC.additive, seq($.expression, choice(op($, "+"), op($, "-")), $.expression)),
                prec.left(PREC.multiplicative, seq($.expression, choice(op($, "*"), op($, "/"), op($, "%")), $.expression)),
            ),

        unary_expression: ($) =>
            prec(
                PREC.unary,
                seq(
                    choice(
                        op($, "!"),
                        op($, "~"),
                        op($, "+"),
                        op($, "-"),
                        op($, "&"),
                        op($, "*"),
                        op($, "++"),
                        op($, "--"),
                        op($, "move"),
                    ),
                    $.expression,
                ),
            ),

        postfix_expression: ($) =>
            prec.left(
                PREC.call,
                seq(
                    $.primary_expression,
                    repeat1(
                        choice(
                            $.argument_list,
                            seq(choice(".", op($, "->")), $.identifier),
                            seq("[", $.expression, "]"),
                            choice(op($, "++"), op($, "--")),
                        ),
                    ),
                ),
            ),

        argument_list: ($) => seq("(", optional(commaSep1($.expression)), ")"),

        literal: ($) =>
            choice(
                $.number_literal,
                $.string_literal,
                $.char_literal,
                keyword($, "true"),
                keyword($, "false"),
            ),
